# AqaGCSEComputerScienceStuff

./: .gitignore  .travis.yml  Cargo.toml
InputHandlers/: Cargo.toml
InputHandlers/src/: lib.rs
MainMenu/: Cargo.toml
MainMenu/src/: main.rs
Projects/Connect4/: Cargo.toml
Projects/Connect4/src/: lib.rs
Projects/EasterChallenges/: Cargo.toml
Projects/EasterChallenges/src/: lib.rs
Unit02_01-EasterProgrammingChallenges/: Cargo.toml
Unit02_01-EasterProgrammingChallenges/src/: main.rs
Unit02_02-Practise1-Selection/: Cargo.toml
Unit02_02-Practise1-Selection/src/: main.rs
Unit02_03_1a-DefensiveDesign/: Cargo.toml
Unit02_03_1a-DefensiveDesign/src/: main.rs
Units/Unit2-02-SelectionPractise/: Cargo.toml
Units/Unit2-02-SelectionPractise/src/: lib.rs
Units/Unit2-03-DefensiveDesignA/: Cargo.toml
Units/Unit2-03-DefensiveDesignA/src/: lib.rs
Units/Unit2-03-DefensiveDesignB/: Cargo.toml
Units/Unit2-03-DefensiveDesignB/src/: lib.rs
general/src/: lib.rs
unit02_01-easter_programming_challenges/: Cargo.toml
unit02_03_1b-defensive_design/: Cargo.toml
unit02_03_1b-defensive_design/src/: main.rs
